# TennisBallCollector

./: .gitignore  README.md
compute_trajectory/: CMakeLists.txt  package.xml
compute_trajectory/src/: travelling.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Ball.msg  BallList.msg
reports/: FirstSprintDebrief.md  FirstSprintGoals.md  FourSprintDebrief.md  FourSprintGoals.md  SecondSprintDebrief.md  SecondSprintGoals.md  SixthSprintGoals.md  ThirdSprintDebrief.md  ThirdSprintGoals.md
ressources/: chemin_optimal.py  detection.py  planning.py  tracking.py
roblochon_description/config/: display.rviz  nav2_params.yaml
roblochon_description/launch/: display.launch.py
roblochon_description/urdf/: roblochon.urdf.xacro
roblochon_gazebo/: CMakeLists.txt  package.xml
roblochon_gazebo/launch/: gazebo.launch.py
robochon_control/: package.xml  setup.cfg  setup.py
robochon_control/robochon_control/: control.py  control_2.py  control_test.py  nav_to_goal.py  nav_to_goal_with_spirals.py
robochon_description/: CMakeLists.txt  package.xml
robochon_description/config/: ekf.yaml  nav2_params.yaml
robochon_description/launch/: display.launch.py
robochon_description/urdf/: roblochon.urdf.xacro  robochon.urdf.xacro  robochon.urdf_V1.xacro
sam_bot_description/launch/: display.launch.py
tennis_ball_collector_launch/: package.xml  setup.cfg  setup.py
tennis_ball_collector_launch/config/: layout.rviz
tennis_ball_collector_launch/launch/: mission_1.launch.py  telemetry.launch.py  test.launch.py
tennis_ball_detector/: package.xml  setup.cfg  setup.py
tennis_ball_detector/tennis_ball_detector/: detection.py  detection_node.py
tennis_ball_detector/tennis_ball_detector/scripts/: detection.py  tracking.py
tennis_court/: CMakeLists.txt  README.md  package.xml
tennis_court/config/: config.rviz
tennis_court/launch/: robochon.launch.py  tennis_court.launch.py
tennis_court/models/tennis_court/: model.config  model.sdf
tennis_court/models/tennis_court/materials/scripts/: tennis_court_ground.material
tennis_court/models/zenith_camera/: model.config  model.sdf
tennis_court/msg/: BallManagerStats.msg
tennis_court/scripts/: __init__.py  ball_manager.py
tennis_court/src/: GUITennisCourtOverlay.cc  GUITennisCourtOverlay.hh
tennis_court/urdf/: ball.urdf.xacro
tennis_court/worlds/: court.world
vadrouilleur_description/: CMakeLists.txt  package.xml
vadrouilleur_description/launch/: display.launch.py  display_o.launch.py
vadrouilleur_description/urdf/: frangipane.urdf  vadrouilleur.xacro  vadrouilleur_gazebo.gazebo.xacro
